# SHAMS_Utilities

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  library.json
.devcontainer/: Dockerfile
.github/workflows/: cmake-build-and-test.yml
Buffer/: CMakeLists.txt  ShamsBufferConfig.cmake
Buffer/includes/: Buffer.hpp  StaticBuffer.hpp
Buffer/test/: CMakeLists.txt
Buffer/test/tests/: testBuffer.cpp
Dictionary/: CMakeLists.txt  ShamsDictionaryConfig.cmake
Dictionary/includes/: Dictionary.hpp
Dictionary/test/: CMakeLists.txt
Dictionary/test/tests/: testDictionary.cpp
RingBuffer/: CMakeLists.txt  ShamsRingBufferConfig.cmake  StaticRingBuffer.hpp
RingBuffer/includes/: RingBuffer.hpp
RingBuffer/test/: CMakeLists.txt
RingBuffer/test/tests/: testRingBuffer.cpp
Types/: CMakeLists.txt  ShamsBuffer.hpp  ShamsDictionary.hpp  ShamsRingBuffer.hpp  ShamsStaticBuffer.hpp  ShamsStaticRingBuffer.hpp  ShamsStaticString.hpp
cmake/: install_libs.cmake
test/: CMakeLists.txt
test/tests/: testBuffer.cpp  testDictionary.cpp  testRingBuffer.cpp  testString.cpp
